--- a/report_template_multipleFiles_Introduction.tex
+++ b/report_template_multipleFiles_Introduction.tex
@@ -1,2 +1,10 @@
 \section{Introduction}
 This is the introduction written in the introduction.tex file!
+
+\subsection{What type of research is the objective?}
+
+\subsection{What are the important elements/ objects?}
+
+\subsection{How do we evaluate our research?}
+
+\subsection{Which (types of) sources are to be used for the research?}
