--- a/report_template_multipleFiles_Introduction.tex
+++ b/report_template_multipleFiles_Introduction.tex
@@ -7,4 +7,7 @@ This is the introduction written in the introduction.tex file!
 
 \subsection{How do we evaluate our research?}
 
+In order to evaluate this research, it is important to establish a clear set of criteria, which measure how violence in video gamey influence adolecents' perception of death and violence in real live.
+
+
 \subsection{Which (types of) sources are to be used for the research?}
