--- a/report_template_multipleFiles_Introduction.tex
+++ b/report_template_multipleFiles_Introduction.tex
@@ -7,7 +7,36 @@ This is the introduction written in the introduction.tex file!
 
 \subsection{How do we evaluate our research?}
 
-In order to evaluate this research, it is important to establish a clear set of criteria, which measure how violence in video gamey influence adolecents' perception of death and violence in real live.
-
+In order to evaluate this research, it is important to establish a clear set of criteria, 
+which measure how violence in video games influences adolescents' perception of death and violence in real life.
+Firstly the study will look into whether there are measurable changes in attitude and tolerance towards violence after exposure to violent
+video games. For example, if adolescents' that grew up with violent video games show reduced emotional sensitivity to violent content
+or higher acceptance towards acts of aggression in everyday situations, this can be taken as an indicator of desensitization. \\
+Furthermore the study will focus on investigation patterns of behavioral changes. This might include identifying if exposure to aggressive 
+game content might increase aggressive and violent thoughts, language and actions in comparison to non-violent video games. Surveys, 
+psychological questionnaires, as well as controlled experiments from existing literature will serve as the main tools for gathering useful information. \\
+Thirdly, criteria such as the ability of young individuals to distinguish between fiction and reality will be examined. This includes assessing
+the grafical depiction of violence in videogames and the realism of graphics and violent scenarios, aswell as reactions of NPCs to player driven violence.
+This also includes if the normalization of violence makes it appear as an acceptable problem-solving strategy. If adolescents struggle to
+differentiate between in-game violence and real-world consequences, this could indicate a blurring of boundaries. \\
+Finally the study will evaluate against existing standards of psychological and sociological analysis. The reliability of finding consistency across
+existing studies and the amount to which the findings can be generalized to a broader population will be considered as essential criteria for the
+validity of the research.
 
 \subsection{Which (types of) sources are to be used for the research?}
+
+This research will rely on various types of academic and empirical sources in order to provide a well-rounded and evidence-based perspective on the topic.
+Peer-reviewed journal articles and empirical studies in the field of psychology, media studies, as well as sociology will serve as the primary sources.
+These sources will provide scientific evidential data and insights into the psychological impact of violent video games on adolescents. \\
+Secondly, official reports and publications from reputable organisations, such as for example the American Psychological Association (APA)
+and the World Health Organization (WHO)  will be consulted, as they provide standardized guidelines as well as comprehensive and professional assessments,
+regarding youth, media and mental health. \\
+Furthermore, books, as well as theoretical works by experts on media effects, aggression and adolescent development will be consulted to provide a deeper
+understanding of the underlying theories, concepts and frameworks that inform the research. \\
+Additionally, surveys, case studies and pilot studies that are conducted by universities or youth organizations will be used to offer a valuable insight
+into current trends and real-life observations. \\
+Also taken into account will be Laws and age restrictions (eg. PEGI ESRB ratings, etc.) as well as parental and ethical guidelines regarding video games, 
+since they show how society attempts to regulate exposure to violent content among adolescents. \\
+Finally, statistical data from governmental and educational institutions will be used to provide support to the claims about the prevalence of gaming amongst
+adolescents and potential correlations with violent behavior. Through combining theoretical, statistical, empirical, and practical sources, the research aims
+to build a comprehensive understanding of the influence of violent video games on adolescents' perception of death and violence in real life.
