--- a/report_template_multipleFiles_Introduction.tex
+++ b/report_template_multipleFiles_Introduction.tex
@@ -1,9 +1,39 @@
 \section{Introduction}
-This is the introduction written in the introduction.tex file!
+Video games are a central leisure activity for many teenagers. Modern titles frequently include
+violence and death, often very close and in a rewarding system. This study will specifically focus on how violence and death in video games affect adolescents' 
+behavioral and emotional responses.
+\\
+Although video games containing violence and mortality are widely played by adolescents, there is ongoing debate about whether these lead to changes in teenagers. 
+This study aims to clarify these relationships by examining how frequency and intensity of exposure to in-game violence and death affect teenagers.
+
 
 \subsection{What type of research is the objective?}
 
+\begin{enumerate}
+
+    \item To describe patterns of exposure to violent and death-related content in video games among teenagers.
+    \item To examine the relationship between exposure to violent/death content and aggressive behaviour and anger.
+    \item To investigate whether frequent exposure to violent/death content is associated with changes in empathy and moral reasoning.
+    \item To explore moderating factors (e.g., gender, parental mediation, prior aggression, and game context such as competitive vs.\ narrative-driven violence).
+\end{enumerate}
+The following questions will be answered.
+\begin{enumerate}
+    \item What are the typical frequency and intensity levels of exposure to violent and death-related content in video games among teenagers in the sample?
+    \item Is greater exposure to violent/death content associated with higher levels of aggression and anger?
+    \item Is greater exposure associated with lower scores on measures of empathy or altered moral judgments concerning harm?
+    \item Do factors such as parental mediation, type of game, or baseline temperament moderate these associations?
+\end{enumerate}
+
+
+
 \subsection{What are the important elements/ objects?}
+
+\begin{itemize}
+    \item \textbf{Violent content:} Interactive game events that depict or require aggressive acts intended to harm characters (physical fighting, shooting, severe injury), coded by intensity and realism.
+    \item \textbf{Depictions of death:} In-game events where characters die, are killed, or dying is depicted, including contextual cues (graphic vs.\ non-graphic; narrative-driven vs.\ incidental).
+    \item \textbf{Exposure:} Self-reported weekly hours spent playing games containing violent/death content, supplemented by a brief content checklist to gauge intensity and realism.
+\end{itemize}
+
 
 \subsection{How do we evaluate our research?}
 
