--- a/report_template_multipleFiles_Introduction.tex
+++ b/report_template_multipleFiles_Introduction.tex
@@ -1,9 +1,9 @@
 \section{Introduction}
 Video games are a central leisure activity for many teenagers. Modern titles frequently include
-violence and death, often very close and in a rewarding system. This study will specifically focus on how violence and death in video games affect adolescents' 
+violence and death, often very close and in a rewarding systems. This study will specifically focus on how violence and death in video games affect adolescents' 
 behavioral and emotional responses.
 \\
-Although video games containing violence and mortality are widely played by adolescents, there is ongoing debate about whether these lead to changes in teenagers. 
+Although video games containing violence and mortality are widely played by adolescents, there is ongoing debate about whether those lead to changes in teenagers. 
 This study aims to clarify these relationships by examining how frequency and intensity of exposure to in-game violence and death affect teenagers.
 
 
