finally created pdf

--- a/research_paper/report_template_multipleFiles_Main.tex
+++ b/research_paper/report_template_multipleFiles_Main.tex
@@ -17,9 +17,9 @@
 \usepackage[compact]{titlesec}%include title formatting package
 
 % Title Page
-\title{Title here}
-\author{Pietje Puk and Piet Pukje}
-\date{December 15th 2019 \\Module: SEAR \\Venlo, Limburg, Netherlands}
+\title{How does violence and death in video games affect adolescents' perception of death and violence in real life?}
+\author{Paul Szelag and Anna Varga}
+\date{October 1st 2025 \\Module: ARDA \\Venlo, Limburg, Netherlands}
 
 
 \begin{document}
