--- a/research_paper/report_template_multipleFiles_Main.tex
+++ b/research_paper/report_template_multipleFiles_Main.tex
@@ -18,7 +18,7 @@
 
 % Title Page
 \title{How does violence and death in video games affect adolescents' perception of death and violence in real life?}
-\author{Paul Szelag and Anna Varga}
+\author{Paul Szelag (5496535) and Anna Varga (5378192)}
 \date{October 1st 2025 \\Module: ARDA \\Venlo, Limburg, Netherlands}
 
 
