write until first citation

--- a/research_paper/report_template_multipleFiles_Introduction.tex
+++ b/research_paper/report_template_multipleFiles_Introduction.tex
@@ -1,1 +1,11 @@
 \section{Introduction}
+Video games have become one of the most prevalent forms of entertainment among adolescents across the globe,
+with violent and death-related content present in many popular titles (\textit{e.g. Call of Duty, Fortnite, Grand Theft Auto}).
+ Existing rating systems such as PEGI (EU) and ESRB (US) already flag the degree of violent realism in these games,
+ reflecting widespread public concern about the effects of such content on young people's development and moral reasoning.
+
+ \subsection{Background and significance}
+ Debates about whether violent video games contribute to aggressive attitudes or behavior have persisted for as long as such games exist.
+ Meta-analyses and longitudinal studies have produced mixed results, with some finding small to none effects on aggression, whilst others
+ suggest that frequent exposure to violent or dark-themed games may increase tolerance toward aggression and reduce empathic concern for
+ others \cite{anderson2007violent}.
