--- a/research_paper/report_template_multipleFiles_Main.tex
+++ b/research_paper/report_template_multipleFiles_Main.tex
@@ -39,6 +39,7 @@ This is the abstract.
 	
 \include{report_template_multipleFiles_Introduction} 
 \include{report_template_multipleFiles_Methods} 
+\bibliography{references}
 \end{document}
 	
 	
