wrote whole introduction

--- a/research_paper/report_template_multipleFiles_Introduction.tex
+++ b/research_paper/report_template_multipleFiles_Introduction.tex
@@ -1,11 +1,64 @@
 \section{Introduction}
 Video games have become one of the most prevalent forms of entertainment among adolescents across the globe,
 with violent and death-related content present in many popular titles (\textit{e.g. Call of Duty, Fortnite, Grand Theft Auto}).
- Existing rating systems such as PEGI (EU) and ESRB (US) already flag the degree of violent realism in these games,
- reflecting widespread public concern about the effects of such content on young people's development and moral reasoning.
+Existing rating systems such as PEGI (EU) and ESRB (US) already flag the degree of violent realism in these games,
+reflecting widespread public concern about the effects of such content on young people's development and moral reasoning.
 
- \subsection{Background and significance}
- Debates about whether violent video games contribute to aggressive attitudes or behavior have persisted for as long as such games exist.
- Meta-analyses and longitudinal studies have produced mixed results, with some finding small to none effects on aggression, whilst others
- suggest that frequent exposure to violent or dark-themed games may increase tolerance toward aggression and reduce empathic concern for
- others \cite{anderson2007violent}.
+\subsection{Background and significance}
+Debates about whether violent video games contribute to aggressive attitudes or behavior have persisted for as long as such games 
+exist. Meta-analyses and longitudinal studies have produced mixed results, with some suggesting that frequent exposure to violent
+or dark-themed games may increase tolerance toward aggression and reduce empathic concern for others 
+(\cite{Anderson_Bushman_2018,Bushman_2025}). Other large-scale and well controlled studies, however, found little to no direct
+causal link between exposure to violent game content and real-world aggression once individual traits and prior aggression are
+accounted for (\cite{Przybylski_Warstein_2019,Lacko_Macháčková_Šmahel_2024}). \\
+Although large-scale violent events such as school shootings and public attacks reopens public debates about the role of violent
+media, including video games, in fostering aggressive tendencies, empirical evidence connecting real-world violent incidents and
+video game consumption remains correlational and far from conclusive (\cite{Ramasubramanian_Banjo_2020}). Still, the perception
+that violent video games might normalize aggression or death sustains an important social as well as scientific question:
+\textbf{how does repeated exposure to virtual violence shape adolescents' moral reasoning, emotional responses to and perception
+of real-world violence and harm?}
+
+\subsection{Psychological mechanisms}
+From a psychological perspective, video games can engage several mechanisms, such as reward-processing systems, that reinforce and
+justify aggressive acts. In many games players are rewarded with (Experience-) points, level-ups, in-game items or currency after
+committing violent or unjustful acts, such as slaying enemies or stealing from non-player characters (NPCs). This rewarding
+may strengthen the player's association of a positive outcome with aggressive behavior, potentially leading to desensitization toward
+violence over time (\cite{Carnagey_Anderson_Bushman_2007}). Additionally, the immersive and interactive nature of video games allows
+players to actively participate in violent scenarios, which may enhance the emotional impact and identification with aggressive
+characters.
+
+\subsection{Gender differences}
+Gender differences may also play a role in how violent video games affect adolescents. Research indicates that boys, statistically
+play more violence and competitive-/combat-driven games than girls, who tend to prefer narrative-driven and cooperative experiences
+(\cite{Walkerdine_2007,Hartmann_Klimmt_2017}). This differential exposure could lead to differences in moral reasoning and emotional
+responses to violence if viewed as normative behavior within their gaming communities. Furthermore, societal norms and expectations
+around masculinity and aggression may further shape these experiences and responses.
+
+\subsection{Societal and developmental relevance}
+Investigating the impact of adolescents' perception of violence and death in video games is especially relevant given that adolescents
+are in a critical developmental stage where moral reasoning and empathy are still maturing (\cite{Blakemore_Robbins_2012}),
+and they are particularly susceptible to peer influence and media effects (\cite{Steinberg_2008,Fikkers_Piotrowski_Lugtig_Valkenburg_2016}).
+Adolescents are also in the process of forming their identity and understanding social norms, making them especially vulnerable and
+receptive to media messages, including those related to violence and death (\cite{Avci_Baams_Kretschmer_2024}). Furthermore,
+adolescents' digital lives often blur the boundaries between fantasy and reality, especially in immersive or multiplayer environments. \\
+The issue is not only theoretical but also practical. Given the rise of interest in game and app development, understanding how
+reward systems and death depictions shape users' psychological responses can lead the creation of games that are engaging, yet
+ethically and emotionally responsible. Integrating psychological insights into game design could help developers build interactive
+experiences that foster empathy, prosocial behavior, and critical thinking about violence rather than desensitization or normalization
+of harm.
+
+\subsection{Research question and hypotheses}
+This study aims to investigate how exposure to violent and death-related content in video games influences adolescents'
+moral reasoning, emotional responses, and behavioral tendencies. Specifically, the research will explore whether frequent exposure
+to violent/death content is associated with increased tolerance for aggression, reduced empathy, and altered moral judgments concerning
+harm to others. \\
+Based on desensitization and aggression models, we hypothesize that:
+\begin{enumerate}
+    \item Greater exposure to violent/death-related game content correlates with higher acceptrance of aggression and reduce empathy for
+    pain and suffering in real life.
+    \item Games that reward aggressive actions will amplify these associations compared to games without such reward systems.
+    \item These relationships will differ by gender, with stronger effects expected among boys.
+\end{enumerate}
+Addressing these questions can clarify whether interactive violent content merely reflects existing preferences or actively shapes
+and contributes to perceptual, moral and emotional desensitization. Understanding these dynamics is crucial for informing parents,
+educators, policymakers and game developers about potential risks and ethical considerations in adolescent media consumption.
