--- a/research_paper/report_template_multipleFiles_Methods.tex
+++ b/research_paper/report_template_multipleFiles_Methods.tex
@@ -38,7 +38,7 @@ The following questions will be answered.
 \subsection{How do we evaluate our research?}
 
 In order to evaluate this research, it is important to establish a clear set of criteria, 
-which measure how violence in video games influences adolescents' perception of death and violence in real life.
+which measures how violence in video games influences adolescents' perception of death and violence in real life.
 Firstly the study will look into whether there are measurable changes in attitude and tolerance towards violence after exposure to violent
 video games. For example, if adolescents' that grew up with violent video games show reduced emotional sensitivity to violent content
 or higher acceptance towards acts of aggression in everyday situations, this can be taken as an indicator of desensitization. \\
