--- a/research_paper/report_template_multipleFiles_Introduction.tex
+++ b/research_paper/report_template_multipleFiles_Introduction.tex
@@ -5,8 +5,8 @@ Existing rating systems such as PEGI (EU) and ESRB (US) already flag the degree 
 reflecting widespread public concern about the effects of such content on young people's development and moral reasoning.
 
 \subsection{Background and significance}
-Debates about whether violent video games contribute to aggressive attitudes or behavior have persisted for as long as such games 
-exist. Meta-analyses and longitudinal studies have produced mixed results, with some suggesting that frequent exposure to violent
+Discussions over whether violent video games influence aggressive attitudes or behavior have continued since these games first appeared. 
+Meta-analyses and longitudinal studies have produced mixed results, with some suggesting that frequent exposure to violent
 or dark-themed games may increase tolerance toward aggression and reduce empathic concern for others 
 (\cite{Anderson_Bushman_2018,Bushman_2025}). Other large-scale and well controlled studies, however, found little to no direct
 causal link between exposure to violent game content and real-world aggression once individual traits and prior aggression are
@@ -25,7 +25,9 @@ committing violent or unjustful acts, such as slaying enemies or stealing from n
 may strengthen the player's association of a positive outcome with aggressive behavior, potentially leading to desensitization toward
 violence over time (\cite{Carnagey_Anderson_Bushman_2007}). Additionally, the immersive and interactive nature of video games allows
 players to actively participate in violent scenarios, which may enhance the emotional impact and identification with aggressive
-characters.
+characters. Furthermore, these games often lack realistic consequences for violent actions, which could distort players' understanding of the severity
+and impact of violence in real life. And finally, in these games death is often portrayed in a trivialized or gamified manner,
+where characters can respawn or continue playing after being killed, potentially diminishing the perceived gravity of death and harm. (\cite{Hartmann, Krakowiak, & Tsay‑Vogel, 2014})
 
 \subsection{Gender differences}
 Gender differences may also play a role in how violent video games affect adolescents. Research indicates that boys, statistically
