--- a/research_paper/referances.bib
+++ b/research_paper/referances.bib
@@ -96,6 +96,21 @@
     year = {2018}
 }
 
+@article{Hartmann_Krakowiak_Tsay-Vogel_2014,
+    title = "How violent video games communicate violence: A literature review and content analysis of moral disengagement factors",
+    abstract = "Mechanisms of moral disengagement in violent video game play have recently received considerable attention among communication scholars. To date, however, no study has analyzed the prevalence of moral disengagement factors in violent video games. To fill this research gap, the present approach includes both a systematic literature review and a content analysis of moral disengagement cues embedded in the narratives and actual game play of 17 top-ranked first-person shooters (PC). Findings suggest that moral disengagement factors are frequently embedded in first-person shooters, but their prevalence varies considerably. Most violent video games include justifications of the portrayed violence, a distorted portrayal of consequences, and dehumanization of opponents. Implications of the findings for research on violent games are discussed. {\textcopyright} 2014 {\textcopyright} 2014 National Communication Association.",
+    author = "T. Hartmann and M. Krakowiak and M. Tsay-Vogel",
+    year = "2014",
+    doi = "10.1080/03637751.2014.922206",
+    language = "English",
+    volume = "81",
+    pages = "310--332",
+    journal = "Communication Monographs",
+    issn = "0363-7751",
+    publisher = "Routledge",
+    number = "3",
+}
+
 @book{Walkerdine_2007,
     title = {Children, Gender, Video Games: Towards a Relational Approach to Multimedia},
     author = {Walkerdine, Valerie},
