--- a/research_paper/report_template_multipleFiles_Introduction.tex
+++ b/research_paper/report_template_multipleFiles_Introduction.tex
@@ -27,7 +27,7 @@ violence over time (\cite{Carnagey_Anderson_Bushman_2007}). Additionally, the im
 players to actively participate in violent scenarios, which may enhance the emotional impact and identification with aggressive
 characters. Furthermore, these games often lack realistic consequences for violent actions, which could distort players' understanding of the severity
 and impact of violence in real life. And finally, in these games death is often portrayed in a trivialized or gamified manner,
-where characters can respawn or continue playing after being killed, potentially diminishing the perceived gravity of death and harm. (\cite{Hartmann, Krakowiak, & Tsay‑Vogel, 2014})
+where characters can respawn or continue playing after being killed, potentially diminishing the perceived gravity of death and harm (\cite{Hartmann_Krakowiak_Tsay-Vogel_2014}).
 
 \subsection{Gender differences}
 Gender differences may also play a role in how violent video games affect adolescents. Research indicates that boys, statistically
