--- a/research_paper/referances.bib
+++ b/research_paper/referances.bib
@@ -185,4 +185,45 @@
     doi = {10.1007/s40894-024-00251-1},
     url = {https://doi.org/10.1007/s40894-024-00251-1},
     abstract = {Social media have become a new context for adolescent identity development. However, it is challenging to build a thorough understanding of how social media and identity development are related because studies refer to different facets of social media engagement and use diverse concepts related to identity. This review synthesizes research on the relationships between quantity and quality of social media use and different dimensions of identity development, including identity exploration and commitment, self-concept clarity, and identity distress. The search conducted across four databases yielded 4,467 records, of which 32 studies were included in the analysis, comprising 19,658 adolescents with a mean age of 16.43 years (SD = 1.81) and an age range of eight to 26 years. Active participation in social media, rather than the amount of time spent on it, was associated with more identity exploration. Authenticity on social media, not idealized self-presentation, correlated with higher self-concept clarity. Additionally, adolescents who engaged in comparisons on social media demonstrated higher levels of identity exploration and identity distress. Overall, it seems to matter more for identity development what young people do on social media than how much time they spend on it.}
-    }
+}
+
+
+@Article{Borrego-Ruiz_Borrego_2025,
+    AUTHOR = {Borrego-Ruiz, Alejandro and Borrego, Juan J.},
+    TITLE = {Adolescent Aggression: A Narrative Review on the Potential Impact of Violent Video Games},
+    JOURNAL = {Psychology International},
+    VOLUME = {7},
+    YEAR = {2025},
+    NUMBER = {1},
+    ARTICLE-NUMBER = {12},
+    URL = {https://www.mdpi.com/2813-9844/7/1/12},
+    ISSN = {2813-9844},
+    ABSTRACT = {Background: Exposure to violent content through video games can shape perceptions of aggression as normative or acceptable, potentially desensitizing adolescents to violence and increasing the likelihood that they will engage in aggressive behavior in their real-world interactions. This narrative review examines the relationship between violent video games (VVGs) and youth aggression, addressing (i) VVG exposure through the lens of Social Learning Theory and the General Aggression Model; (ii) the biological determinants of aggressive behavior, including neurophysiological correlates and the potential modulatory role of the gut microbiome; (iii) and current evidence on the influence of VVG exposure on adolescent aggression. Results: VVG exposure may promote moral disengagement and reinforce aggressive behavior through rewarding violent actions, potentially leading to real-life aggression. Exposure to VVGs increases aggression by elevating cortisol levels, activating the sympathetic nervous system, stimulating the brain’s reward system, and disrupting neurotransmitter balance. Alterations in gut microbiome composition could occur as a result of engaging in VVGs, potentially mirroring the physiological responses observed in violent real-world activities. The relationship between VVGs and aggression among adolescents has been widely explored, with studies generally indicating that VVG exposure can lead to desensitization to violence, reduced empathy, and diminished prosocial behavior. VVGs have also been linked to both bullying perpetration and victimization dynamics among adolescents, contributing to mental health issues, which in turn exacerbate problematic gaming behaviors. Conclusions: While there is evidence suggesting that exposure to VVGs is associated with increased adolescent aggression, discrepancies in the literature highlight the need for further research aimed at improving our understanding of this phenomenon. The studies on this topic reveal significant limitations, including a predominance of cross-sectional designs, methodological shortcomings, small sample sizes, and challenges in generalizing results. Factors such as the developmental stages of the participants, the exclusion of females, and unmeasured variables during long follow-up periods further complicate interpretations. Moreover, parental responsibility and the effectiveness of age ratings require closer examination.},
+    DOI = {10.3390/psycholint7010012}
+}
+
+@article{Miedzobrodzka_2023,
+    author = {Ewa Miedzobrodzka and Johanna C. van Hooff and Lydia Krabbendam and Elly A. Konijn},
+    title = {Desensitized gamers? Violent video game exposure and empathy for pain in adolescents – an ERP study},
+    journal = {Social Neuroscience},
+    volume = {18},
+    number = {6},
+    pages = {365--381},
+    year = {2023},
+    publisher = {Routledge},
+    doi = {10.1080/17470919.2023.2284999},
+    note ={PMID: 37990996},
+    URL = { https://doi.org/10.1080/17470919.2023.2284999},
+    eprint = { https://doi.org/10.1080/17470919.2023.2284999}
+}
+
+@article{Sears_1961,
+    author = {Sears, R. R.},
+    year = {1961},
+    title = {Relation of early socialization experiences to aggression in middle childhood.}, 
+    journal = {The Journal of Abnormal and Social Psychology},
+    volume = {63},
+    number = {3},
+    pages = {466--492},
+    doi = {10.1037/h0041249}
+}
