--- a/research_paper/report_template_multipleFiles_Methods.tex
+++ b/research_paper/report_template_multipleFiles_Methods.tex
@@ -11,7 +11,7 @@ For inclusion in the study, participants must access to video games at least twi
 and participation will be voluntary, anonymous and in accordance with ethical guidelines. For participants under the age of 14, parental consent will also be required.
 
 \subsection{Materials and Measures}
-A structured questionaire will be developed to assess the key constructs of interest. The questionnaire will include validated scales and self-report items to measure:
+A structured questionnaire will be developed to assess the key constructs of interest. The questionnaire will include validated scales and self-report items to measure:
 \begin{itemize}
     \item \textbf{Exposure to video games:} Frequency and duration of video games played, with a focus on violent and death-related content.
     \subitem e.g., "How often do you play video games?", "Do you play games that involve violence or death?"
