--- a/research_paper/report_template_multipleFiles_Methods.tex
+++ b/research_paper/report_template_multipleFiles_Methods.tex
@@ -35,7 +35,7 @@ All questionnaires will be administered in English and will have a German transl
 The Procedure follows the same structure for all participants. Access will be made available with a link to the online questionnaire.
 \begin{enumerate}
     \item \textbf{Distribution:} The distribution will be handled through multiple channels to reach a diverse and representative sample of adolescents.
-        \subitem Schools: A person of authority will br contacted to distribute the link to students.
+        \subitem Schools: A person of authority will be contacted to distribute the link to students.
         \subitem Clubs: Trainers or leaders will be contacted to distribute the link to members.
     \item \textbf{Consent:} Prior to participation the questionnaire will inform the adolescents that participation is entirely voluntary. It will inform that children under
     the age of 14 have to take the survey with parental consent. Anonymity and confidentiality will be assured.
