add university name and date to the title page

--- a/research_paper/report_template_multipleFiles_Main.tex
+++ b/research_paper/report_template_multipleFiles_Main.tex
@@ -19,7 +19,7 @@
 % Title Page
 \title{How does violence and death in video games affect adolescents' perception of death and violence in real life?}
 \author{Paul Szelag (5496535) and Anna Varga (5378192)}
-\date{October 1st 2025 \\Module: ARDA \\Venlo, Limburg, Netherlands}
+\date{October 1st 2025 \\Module: ARDA \\Fontys University of Applied Science - Informatics \\Venlo, Limburg, Netherlands}
 
 
 \begin{document}
