--- a/research_paper/report_template_multipleFiles_Introduction.tex
+++ b/research_paper/report_template_multipleFiles_Introduction.tex
@@ -11,7 +11,7 @@ or dark-themed games may increase tolerance toward aggression and reduce empathi
 (\cite{Anderson_Bushman_2018,Bushman_2025}). Other large-scale and well controlled studies, however, found little to no direct
 causal link between exposure to violent game content and real-world aggression once individual traits and prior aggression are
 accounted for (\cite{Przybylski_Warstein_2019,Lacko_Macháčková_Šmahel_2024}). \\
-Although large-scale violent events such as school shootings and public attacks reopens public debates about the role of violent
+Although large-scale violent events such as school shootings and public attacks reopen public debates about the role of violent
 media, including video games, in fostering aggressive tendencies, empirical evidence connecting real-world violent incidents and
 video game consumption remains correlational and far from conclusive (\cite{Ramasubramanian_Banjo_2020}). Still, the perception
 that violent video games might normalize aggression or death sustains an important social as well as scientific question:
@@ -30,7 +30,7 @@ and impact of violence in real life. And finally, in these games death is often 
 where characters can respawn or continue playing after being killed, potentially diminishing the perceived gravity of death and harm (\cite{Hartmann_Krakowiak_Tsay-Vogel_2014}).
 
 \subsection{Gender differences}
-Gender differences may also play a role in how violent video games affect adolescents. Research indicates that boys, statistically
+Gender differences may also play a role in how violent video games affect adolescents. Research indicates that boys statistically
 play more violence and competitive-/combat-driven games than girls, who tend to prefer narrative-driven and cooperative experiences
 (\cite{Walkerdine_2007,Hartmann_Klimmt_2017}). This differential exposure could lead to differences in moral reasoning and emotional
 responses to violence if viewed as normative behavior within their gaming communities. Furthermore, societal norms and expectations
