added age group differentiation

--- a/research_paper/report_template_multipleFiles_Methods.tex
+++ b/research_paper/report_template_multipleFiles_Methods.tex
@@ -5,7 +5,7 @@ of potential relevant existing datasets. The primary data collection will involv
 exposure to violent and death-related content can be associated with changing perceptions of violence, moral reasoning, emotional responses and behavioral tendencies.
 
 \subsection{Participants}
-The target for this study is adolescents aged 12 to 20 years. A sample size of approximately 100-200 participants will be recruited from secondary schools and clubs
+The target for this study is adolescents aged 12 to 20 years devided into two age groups. A sample size of approximately 100-200 participants will be recruited from secondary schools and clubs
 to ensure a sufficient and diverse representation. The geo-locational focus will be the set on urban and suburban regions within Nordrhine-Westphalia, Germany. \\
 For inclusion in the study, participants must access to video games at least twice a week. To ensure ethical compliance, informed consent will be obtained from all participants
 and participation will be voluntary, anonymous and in accordance with ethical guidelines. For participants under the age of 14, parental consent will also be required.
